--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5"
+    },
+    "require": {
+        "guzzlehttp/guzzle": "~6.0"
     }
 }
